Implement the MediaStreamTrackEvent constructor

Intent to Implement and Ship:
https://groups.google.com/a/chromium.org/d/msg/blink-dev/tfnjsv9jKVg/ZJ79fG_yAQAJ

BUG=646837

Review-Url: https://codereview.chromium.org/2347103003
Cr-Commit-Position: refs/heads/master@{#420421}

Former-commit-id: 3e97df71c62e1626b87744e93b2614ae65cdace7